<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dialog Pool Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Login Page-->
    <string name="userName">User Name : </string>
    <string name="password">Password : </string>
    <string name="btnLogin">Log In</string>
    <string name="btnRegister">Register</string>

    <!--Register Page-->
    <string name="firstName">First Name : </string>
    <string name="lastName">Last Name : </string>
    <string name="mobileNumber">Mobile Number :</string>
    <string name="nic">NIC :</string>
    <string name="email">E-mail :</string>
    <string name="address">Address :</string>
    <string name="gender">Gender :</string>
    <string name="licenceNo">Licence No :</string>
    <string name="vehicleNo">Vehicle No :</string>
    <string name="vehicleType">Vehicle Type : Ex car</string>
    <string name="vehicleDescription">Vehicle Description : </string>
    <string name="confirmPassword">Confirm Password :</string>



    <!--Home Page-->
    <string name="home">Home</string>

    <!--Mode Page-->
    <string name="New_ToggleButton">Satellite</string>
    <string name="New_ToggleButton2">OtherSatellite</string>
    <string name="btnPassenger">Passenger</string>
    <string name="btnDriver">Driver</string>
    <string name="driver">Driver</string>
    <string name="cancel">Cancel</string>
    <string name="freeRide">Free Ride</string>
    <string name="cashRide">Cash Ride</string>
    <string name="amount">Amount per Km (Rs/Km) : </string>


</resources>
