<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup"
    android:background="#fff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/listdrivername"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/driver"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal|fill_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout7" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout3">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/freeRide"
            android:onClick="gotoDriverMap"
            android:id="@+id/btnFreeRide" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout6" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout5" >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="numberDecimal"
            android:textColor="#000"
            android:hint="@string/amount"
            android:ems="10"
            android:id="@+id/editText" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout4" >

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/cashRide"
            android:onClick="gotoDriverMap"
            android:id="@+id/btnCashRide"
            android:clickable="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout" >

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout2" >

        <Button
            android:id="@+id/btnClosePopup"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>


</LinearLayout>